no idea what I'm doing

--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -10,7 +10,10 @@
   <h1>Users</h1>
   <div>
     <ul>
-      <li>List all users</li>
+      <li>Show all the users</li>
+      <li>Create a new users</li>
+      <li>Edit a users</li>
+      <li>Delete a users</li>
     </ul>
   </div>
 </body>
