--- a/views/statics/home.ejs
+++ b/views/statics/home.ejs
@@ -9,6 +9,7 @@
 <body>
   <h1>Reddit Clone</h1>
 
-  <a href="/users">Users</a>
+  <h2>Users</h2>
+  <a href="/users">Show all users</a>
 </body>
 </html>
