--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <ul>
-    <%= results.forEach((user) => { %>
+    <% user.forEach((user) => { %>
       <li><%= user.full_name %> <%= user.username %> <%= user.img_url %></li>
     <% }) %>
   </ul>
